# jc3000

./: .gitignore  LICENSE  Note.py  README.md  Scales.py  Sequence.py  c_major_improv.py  setup.cfg
example/: c_major_improv.py
jc3000/: Note.py  Sequence.py
src/jc3000/: Note.py  Sequence.py  __init__.py
src/jc3000.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
