[metadata]
name = jc3000
version = 0.0.1
author = Reese Porter
author_email = reesedporter@gmail.com
description = A small python package for generating music.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/reesporte/jc3000
project_urls =
    Bug Tracker = https://github.com/reesporte/jc3000/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
install_requires =
    numpy
    scipy
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src